--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
     />
 </head>
 <body>
+ <div class="container">
   <form>
     <label>
       <input type="text" placeholder="Search images..." name="query"/>
@@ -20,6 +21,11 @@
     <button type="submit">Search</button>
   </form>
   <div class="gallery"></div>
+  <button class="load-more hidden">
+    <span class="loader-btn hidden"></span>
+    Load more
+  </button>
+ </div>
   <script type="module" src="./main.js"></script>
 </body>
 </html>
